[tool.poetry]
name = "hsr_farmer"
version = "3.0.0"
description = ""
authors = ["Maximilian Neudert <max@neuds.de>"]
readme = "README.md"
packages = [{include = "*", from="src"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pynput = "^1.7.6"
numpy = "^1.26.3"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
mss = "^9.0.1"
pure-python-adb = "^0.3.0.dev0"
aiofiles = "^23.2.1"
scikit-image = "^0.22.0"
nicegui = "^1.4.25"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
pyarrow = "^17.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


