[project]
name = "wow-fisherman"
version = "1.0.0"
description = "Fisherman for WoW"
authors = [
    {name = "Maximilian Neudert",email = "max@neudert.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.0,<3.0.0)",
    "mss (>=10.0.0,<11.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyscreenshot (>=3.1,<4.0)",
    "pillow (>=11.1.0,<12.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
